get tickets from db & reorder tickets done